unpackaged/main/default/objects/Samsara_Document__c/Samsara_Document__c.object-meta.xml
<CustomObject>
    <label>Samsara Document</label>
    <nameField>
        <label>Samsara Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Samsara Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>