unpackaged/main/default/objects/Samsara_Document__c/fields/Bags_given_new__c.field-meta.xml
<CustomField>
    <fullName>Bags_given_new__c</fullName>
    <label>Bags Given-new</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>