unpackaged/main/default/objects/Samsara_Document__c/fields/Bags_Given_Rolled__c.field-meta.xml
<CustomField>
    <fullName>Bags_Given_Rolled__c</fullName>
    <label>Bags Given-Rolled</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>