unpackaged/main/default/objects/Samsara_Document__c/fields/Fuel_Cost__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Cost__c</fullName>
    <label>Total Fuel Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>