unpackaged/main/default/objects/Samsara_Document__c/fields/Gallons_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Gallons_Purchased__c</fullName>
    <label>Gallons Purchased</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>