unpackaged/main/default/objects/Samsara_Document__c/fields/Gross_Weight_tons__c.field-meta.xml
<CustomField>
    <fullName>Gross_Weight_tons__c</fullName>
    <label>Gross Weight (tons)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>