unpackaged/main/default/objects/Samsara_Document__c/fields/Gross_Weight_yards__c.field-meta.xml
<CustomField>
    <fullName>Gross_Weight_yards__c</fullName>
    <label>Gross Weight (yards)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>