unpackaged/main/default/objects/Samsara_Document__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Samsara Documents</relationshipLabel>
    <relationshipName>Samsara_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>