unpackaged/main/default/objects/Samsara_Document__c/fields/Raw_Data__c.field-meta.xml
<CustomField>
    <fullName>Raw_Data__c</fullName>
    <label>Raw Data</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>