unpackaged/main/default/objects/Samsara_Document__c/fields/Stop__c.field-meta.xml
<CustomField>
    <fullName>Stop__c</fullName>
    <label>Stop</label>
    <length>18</length>
    <type>Text</type>
</CustomField>