unpackaged/main/default/objects/Samsara_Document__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>Samsara Documents</relationshipLabel>
    <relationshipName>Samsara_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>