unpackaged/main/default/objects/Samsara_Document__c/recordTypes/Fuel_Receipt.recordType-meta.xml
<RecordType>
    <fullName>Fuel_Receipt</fullName>
    <active>true</active>
    <label>Fuel Receipt</label>
</RecordType>