unpackaged/main/default/objects/Samsara_Document__c/recordTypes/Irretrievable_Bag.recordType-meta.xml
<RecordType>
    <fullName>Irretrievable_Bag</fullName>
    <active>true</active>
    <label>Irretrievable Bag</label>
</RecordType>