unpackaged/main/default/objects/Samsara_Document__c/recordTypes/Proof_of_Delivery.recordType-meta.xml
<RecordType>
    <fullName>Proof_of_Delivery</fullName>
    <active>true</active>
    <label>Pickup Photos</label>
</RecordType>