unpackaged/main/default/objects/Samsara_Document__c/recordTypes/Scale_Ticket.recordType-meta.xml
<RecordType>
    <fullName>Scale_Ticket</fullName>
    <active>true</active>
    <label>Scale Ticket</label>
</RecordType>