unpackaged/main/default/objects/Samsara_Document__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Samsara_Created_Date__c</columns>
    <columns>Samsara_ID__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Order__c</field>
        <operation>equals</operation>
    </filters>
    <label>All</label>
</ListView>