unpackaged/main/default/objects/Samsara_Document__c/listViews/Fuel_Receipts.listView-meta.xml
<ListView>
    <fullName>Fuel_Receipts</fullName>
    <columns>NAME</columns>
    <columns>Samsara_Created_Date__c</columns>
    <columns>Vehicle__c</columns>
    <columns>Fuel_Type__c</columns>
    <columns>Gallons_Purchased__c</columns>
    <columns>Fuel_Cost__c</columns>
    <columns>Location_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Samsara_Document__c.Fuel_Receipt</value>
    </filters>
    <label>Fuel Receipts</label>
</ListView>