unpackaged/main/default/objects/Samsara_Document__c/listViews/Scale_Tickets.listView-meta.xml
<ListView>
    <fullName>Scale_Tickets</fullName>
    <columns>NAME</columns>
    <columns>Location_Name__c</columns>
    <columns>Account__c</columns>
    <columns>Reconciled__c</columns>
    <columns>Samsara_Created_Date__c</columns>
    <columns>Gross_Weight_tons__c</columns>
    <columns>Gross_Weight_yards__c</columns>
    <columns>Cost__c</columns>
    <columns>Vehicle__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Samsara_Document__c.Scale_Ticket</value>
    </filters>
    <label>Scale Tickets</label>
</ListView>